--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 alt="Планшет с клавиатурой"
               />
               <div class="overlay">
-                <h3 class="title--uppercase">Десктопные приложения</h3>
+                <p class="title--uppercase">Десктопные приложения</p>
               </div>
             </li>
             <li class="item gallery__item">
@@ -152,13 +152,13 @@
                 alt="Ноутбук и телефон"
               />
               <div class="overlay">
-                <h3 class="title--uppercase">Мобильные приложения</h3>
+                <p class="title--uppercase">Мобильные приложения</p>
               </div>
             </li>
             <li class="item gallery__item">
               <img src="./images/img-3.jpg" width="370" alt="Планшет" />
               <div class="overlay">
-                <h3 class="title--uppercase">Дизайнерские решения</h3>
+                <p class="title--uppercase">Дизайнерские решения</p>
               </div>
             </li>
           </ul>
@@ -507,7 +507,7 @@
           </address>
         </div>
         <div class="join">
-          <h3 class="title--uppercase">Присоединяйтесь</h3>
+          <p class="title--uppercase">Присоединяйтесь</p>
           <ul class="list footer__socials">
             <li class="footer__socials__item">
               <a
@@ -560,7 +560,7 @@
           </ul>
         </div>
         <div class="subscribe">
-          <h3 class="title--uppercase">Подпишитесь на рассылку</h3>
+          <p class="title--uppercase">Подпишитесь на рассылку</p>
           <form class="subscribe__form">
             <input
               type="email"
