--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -303,12 +303,12 @@
               >г. Киев, пр-т Леси Украинки, 26</a
             >
             <ul class="list">
-              <li>
+              <li class="address__item">
                 <a class="link" href="mailto:info@example.com"
                   >info@example.com</a
                 >
               </li>
-              <li>
+              <li class="address__item">
                 <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
               </li>
             </ul>
